[B][COLOR red]Update - v4.2.5 – Oct. 09, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Removed cache check setting for AD, PM, and RD,
    this is now hard coded on to always check cached status.
    You can still enable/disable showing of uncached torrents.[/I]
[COLOR yellow]--[/COLOR][I] Removed setting to enable/disable pack scraping.
    This is now hard coded on.[/I]
[COLOR yellow]--[/COLOR][I] Fix for random container refresah issues
    during playback.[/I]
[COLOR yellow]--[/COLOR][I] Fix for Furk resolve issue.[/I]

[B][COLOR red]Update - v4.2.4 – Oct. 03, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Removed old exo code for configurable "New Movies"
    and "New Episodes".  All items were currently availalbe.[/I]
[COLOR yellow]--[/COLOR][I] Renamed a few menu items.[/I]
[COLOR yellow]--[/COLOR][I] Code changes for "My Accounts" changes.[/I]

[B][COLOR red]Update - v4.2.3 – Oct. 01, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Removed "Premium Services" Auth methods as this now
    uses "My Accounts" and was missed in previous updates.[/I]
[COLOR yellow]--[/COLOR][I] Reformat of scrape progress dialog to make better use
    of available space.[/I]
[COLOR yellow]--[/COLOR][I] Code cleanup and removal of logging from previous
    version.[/I]

[B][COLOR red]Update - v4.2.2 – Sept. 29, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed seven instances of missing ID's in settings.xml.  This
    just caused a constant cleaning of these 7 items that were
    never called or referenced.  This now avoids that notice.[/I]
[COLOR yellow]--[/COLOR][I] Fixed scraper progress dialog displaying to many scraper
    names for skins with small progress dialogs.  Names will not
    display until the remaining count reaches 6.[/I]

[B][COLOR red]Update - v4.2.1 – Sept. 26, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] fix incorrect version bump.[/I]

[B][COLOR red]Update - v4.2.0 – Sept. 26, 2020[/COLOR][/B]